# xminer

./: .gitignore  API_SETUP_STATUS.md  AzuriteConfig  BUNDESTAG_2025_QUICKSTART.md  BUNDESTAG_2025_SCHEMA.md  BUNDESTAG_VOTES_IMPLEMENTATION_SUMMARY.md  BUNDESTAG_VOTES_SETUP.md  FETCH_JAN2026_TWEETS_GUIDE.md  README.md  TESTING_GUIDE.md  Textdokument (neu).txt  __azurite_db_table__.json  check_api_credentials.py  collect_target_posts.ipynb  collect_target_posts.py  explore.ipynb  pyproject.toml  requirements.txt  run_fetch_tweets_jan2026_test.py  setup.cfg  setup_bundestag_2025_db.sql  setup_bundestag_votes_db.sql  test_fetch_jan2026.py  x_api.ipynb
data/: MDB_STAMMDATEN.DTD  politicians - Kopie.xlsx  politicians.csv  politicians.xlsx  politicians2.csv  politicians2.xlsx  politicians3.xlsx  politicians4.csv  politicians4.xlsx  politicians_schema.sql
docs/: BUNDESTAG_2025_RESULTS.md
notebooks/: HOWTO_USE_NOTEBOOKS.md  README_VISUALIZATIONS.md  TWEET_VS_VOTE_GUIDE.md  api_validation_comparison.ipynb  follow_politicians.ipynb  follower_delta_politicians.ipynb  follower_individual_politicians.ipynb  follower_individual_politicians_eng.ipynb  follower_parties_aggregated.ipynb  greenland_usa_denmark_analysis.ipynb  initial_analysis.ipynb  keyword_analysis.ipynb  keyword_analysis_simple.ipynb  mp_demographics_tweet_activity.ipynb  party_voting_loyalty.ipynb  politicians_birthplace_map.ipynb  politicians_vs_election_results.ipynb  politicians_vs_election_results_executed.ipynb  posts_aggregated.ipynb  posts_aggregated2.ipynb  posts_individual.ipynb  quick_charts.py  (+5 more)
(+49 files in other folders)
